# vibe_dvlp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  alg_main  alg_top  build_and_run.sh  build_top.sh  cmake_install.cmake  compile_alg_main.sh  compile_gen_image.sh  compile_hls_main.sh  compile_output_compare.sh  compile_parse_csv.sh  debug_dpc  dpc_test  gen_image_main  generate.sh  hls_main  hls_top  output_compare_main  parse_csv  run_generator_and_dpc.csh  run_py_isp.sh  run_py_isp_image_checker.sh  run_py_isp_image_generator.sh  run_py_isp_image_processor.sh  set_env.sh  sync_c2rtl.sh  sync_files.sh  sync_linux2win.sh  test_coordinate_cpp.cpp  test_coordinate_format.py  test_hex  test_output.txt  test_results.json  vibe
bit/: isp_crop_0816.bit  isp_crop_0816.hwh
compile/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
config/: image_config.json  register_table.csv
data/: alg_crop_data_out.txt  crop_data_out.txt  crop_hls_data_out.txt  crop_py_data_out.txt  hls_crop_data_out.txt  image.txt  random_image.txt  test.txt  vibe.json
py/: README_image_generator.md  compare_dpc_results.py  convert_json_to_csv.py  crop.py  crop_adapter.py  generate_random_image.py  isp_dpc_processor.py  isp_image_generator.py  isp_src_image_generator.py  parse_json.py
script/: build_top.sh  sync_rtl2pynq.sh  unzip_hls.sh
src/: alg_crop.cpp  alg_crop.h  alg_dpc.cpp  alg_dpc.h  alg_info.cpp  alg_info.h  alg_main.cpp  alg_top.cpp  alg_top.h  alg_top_config.json  crop.cpp  crop.h  gen_image_main.cpp  hls_crop.cpp  hls_crop.h  hls_dpc.cpp  hls_dpc.h  hls_info.h  hls_main.cpp  hls_top.cpp  hls_top.h  hls_top_config.json  image_config.json  image_config_test_16bit.json  image_config_test_disabled.json  image_config_test_rgb.json  image_config_test_yuv.json  image_info.h  main.cpp  openISP.json  output_compare_main.cpp  parse_csv_function.cpp  parse_csv_function.h  parse_json_function.h  print_function.cpp  print_function.h  test.csv  vector_function.cpp  vector_function.h  vibe.cpp  (+1 more)
test/: README.md  crop.cmd  regression_test.py  run_test.sh
